--- a/ichwyty/index.html
+++ b/ichwyty/index.html
@@ -31,7 +31,7 @@
 	<h2>Jakis tytul</h2>
 	<p>Lorem ipsum</p>
 	<p>Lorem ipsum</p>
-	<img src="źródło">
+	<img src="img/gitara">
  </article>
  
  <section>
