--- a/ichwyty/index.html
+++ b/ichwyty/index.html
@@ -29,9 +29,11 @@
  
  <article>
 	<h2>Jakis tytul</h2>
+	<div class="artykul">
 	<p>Lorem ipsum</p>
 	<p>Lorem ipsum</p>
 	<img src="img/gitara.png">
+	</div>
  </article>
  
  <section>
