--- a/projectbetterschool/index.html
+++ b/projectbetterschool/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8"> 
         <title>sprawdzianik.pl - Sprawdż się!</title>
-        <meta name="description" content="Chwytasz chwyty">
+        <meta name="description" content="Znajdziesz tutaj materiały, które przydadzą się Tobie w szkole.">
         <meta name="author" content="Szymon Mączyński">
         <link rel="stylesheet" href="styles.css">
     </head>
