--- a/projectbetterschool/admin/index.html
+++ b/projectbetterschool/admin/index.html
@@ -5,16 +5,25 @@
         <meta name="description" content="Znajdziesz tutaj materiały, które przydadzą się Tobie w szkole.">
         <meta name="author" content="Szymon Mączyński">
         <link rel="stylesheet" href="styles.css">
+            <style>
+                body{               
+                    width: 1000px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    background-color: lightgray;
+                    text-align: center;
+                }
+            </style>
     </head>
 
     <body>
-    <center>
+        
         <header>
             <h1> Google Trends </h1>
         </header>
 
         <section>
-                <script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/1243_RC02/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"kartkówka","geo":"PL","time":"today 12-m"},{"keyword":"egzamin","geo":"PL","time":"today 12-m"},{"keyword":"sprawdzian","geo":"PL","time":"today 12-m"},{"keyword":"test","geo":"PL","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"geo=PL&q=kartk%C3%B3wka,egzamin,sprawdzian,test&date=today 12-m,today 12-m,today 12-m,today 12-m","guestPath":"https://trends.google.pl:443/trends/embed/"}); </script> 
+            <p><script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/1243_RC02/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"kartkówka","geo":"PL","time":"today 12-m"},{"keyword":"egzamin","geo":"PL","time":"today 12-m"},{"keyword":"sprawdzian","geo":"PL","time":"today 12-m"},{"keyword":"test","geo":"PL","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"geo=PL&q=kartk%C3%B3wka,egzamin,sprawdzian,test&date=today 12-m,today 12-m,today 12-m,today 12-m","guestPath":"https://trends.google.pl:443/trends/embed/"}); </script> </p>
             <p><h1>Kartkówka</h1></p>
             <p><script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/1243_RC02/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("RELATED_QUERIES_0", {"comparisonItem":[{"keyword":"kartkówka","geo":"PL","time":"today 12-m"},{"keyword":"egzamin","geo":"PL","time":"today 12-m"},{"keyword":"sprawdzian","geo":"PL","time":"today 12-m"},{"keyword":"test","geo":"PL","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"geo=PL&q=kartk%C3%B3wka,egzamin,sprawdzian,test&date=today 12-m,today 12-m,today 12-m,today 12-m","guestPath":"https://trends.google.pl:443/trends/embed/"}); </script> </p>
             <p></p>
@@ -27,7 +36,6 @@
             <p><h1>Test</h1></p>
             <p><script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/1243_RC02/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("RELATED_QUERIES_3", {"comparisonItem":[{"keyword":"kartkówka","geo":"PL","time":"today 12-m"},{"keyword":"egzamin","geo":"PL","time":"today 12-m"},{"keyword":"sprawdzian","geo":"PL","time":"today 12-m"},{"keyword":"test","geo":"PL","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"geo=PL&q=kartk%C3%B3wka,egzamin,sprawdzian,test&date=today 12-m,today 12-m,today 12-m,today 12-m","guestPath":"https://trends.google.pl:443/trends/embed/"}); </script> </p>
         </section>
-    </center>
         <footer>
 
         </footer>
