Zalążek menu na stronie głównej :smile:

--- a/projectbetterschool/index.html
+++ b/projectbetterschool/index.html
@@ -4,12 +4,102 @@
         <title>sprawdzianik.pl - Sprawdż się!</title>
         <meta name="description" content="Znajdziesz tutaj materiały, które przydadzą się Tobie w szkole.">
         <meta name="author" content="Szymon Mączyński">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
-
     <body>
         <header>
-
+            <!-- Zmienić tutaj; tzn wstawić logo, wstawione jest teraz do testów czy hierarchia działczy -->
+            coś tam
+            <p>coś tam</p>
+            <ul>
+                <!--POPRAWIĆ Linki do stron  -->
+                <li>
+                    <a href="index.html" class="active">Strona główna</a>
+                </li>
+                <li class="dropsubmenu">Szkoła podstawowa</li>
+                    <ul class="dropmenu">
+                        <li>Klasa I</li>
+                            <ul class="dropsubmenu">
+                                <li><a href="podstawowa/i/matematyka.html">Matematyka</a></li>
+                                <li><a href="podstawowa/i/angielski.html">Język angielski</a></li>
+                                <li><a href="podstawowa/i/polski.html">Język polski</a></li>
+                            </ul>
+                        <li>Klasa II</li>
+                            <ul class="dropsubmenu">
+                                <li><a href="podstawowa/ii/matematyka.html">Matematyka</a></li>
+                                <li><a href="podstawowa/ii/angielski.html">Język angielski</a></li>
+                                <li><a href="podstawowa/ii/polski.html">Język polski</a></li>
+                            </ul>
+                        <li>Klasa III</li>
+                            <ul class="dropsubmenu">
+                                <li><a href="podstawowa/iii/matematyka.html">Matematyka</a></li>
+                                <li><a href="podstawowa/iii/angielski.html">Język angielski</a></li>
+                                <li><a href="podstawowa/iii/polski.html">Język polski</a></li>
+                            </ul>
+                        <li>Klasa IV</li>
+                            <ul class="dropsubmenu">
+                                <li><a href="podstawowa/iv/historia.html">Historia</a></li>
+                                <li><a href="podstawowa/iv/angielski.html">Język angielski</a></li>
+                                <li><a href="podstawowa/iv/polski.html">Język polski</a></li>
+                                <li><a href="podstawowa/iv/informatyka.html">Informatyka</a></li>
+                                <li><a href="podstawowa/iv/matematyka.html">Matematyka</a></li>
+                                <li><a href="podstawowa/iv/przyroda.html">Przyroda</a></li>
+                                <li><a href="podstawowa/iv/technika.html">Technika</a></li>
+                            </ul>
+                        <li>Klasa V</li>
+                            <ul class="dropsubmenu">
+                                <li><a href="podstawowa/v/biologia.html">Biologia</a></li>
+                                <li><a href="podstawowa/v/geografia.html">Geografia</a></li>
+                                <li><a href="podstawowa/v/historia.html">Historia</a></li>
+                                <li><a href="podstawowa/v/angielski.html">Język angielski</a></li>
+                                <li><a href="podstawowa/v/polski.html">Język polski</a></li>
+                                <li><a href="podstawowa/v/informatyka.html">Informatyka</a></li>
+                                <li><a href="podstawowa/v/matematyka.html">Matematyka</a></li>
+                                <li><a href="podstawowa/v/technika.html">Technika</a></li>
+                            </ul>
+                        <li>Klasa VI</li>
+                            <ul class="dropsubmenu">
+                                <li><a href="podstawowa/vi/biologia.html">Biologia</a></li>
+                                <li><a href="podstawowa/vi/geografia.html">Geografia</a></li>
+                                <li><a href="podstawowa/vi/historia.html">Historia</a></li>
+                                <li><a href="podstawowa/vi/angielski.html">Język angielski</a></li>
+                                <li><a href="podstawowa/vi/polski.html">Język polski</a></li>
+                                <li><a href="podstawowa/vi/informatyka.html">Informatyka</a></li>
+                                <li><a href="podstawowa/vi/matematyka.html">Matematyka</a></li>
+                                <li><a href="podstawowa/vi/technika.html">Technika</a></li>
+                            </ul>
+                        <li>Klasa VII</li>
+                            <ul class="dropsubmenu">
+                                <li><a href="podstawowa/vii/biologia.html">Biologia</a></li>
+                                <li><a href="podstawowa/vii/chemia.html">Chemia</a></li>
+                                <li><a href="podstawowa/vii/fizyka.html">Fizyka</a></li>
+                                <li><a href="podstawowa/vii/geografia.html">Geografia</a></li>
+                                <li><a href="podstawowa/vii/historia.html">Historia</a></li>
+                                <li><a href="podstawowa/vii/angielski.html">Język angielski</a></li>
+                                <li><a href="podstawowa/vii/niemiecki.html">Język niemiecki</a></li>
+                                <li><a href="podstawowa/vii/polski.html">Język polski</a></li>
+                                <li><a href="podstawowa/vii/informatyka.html">Informatyka</a></li>
+                                <li><a href="podstawowa/vii/matematyka.html">Matematyka</a></li>
+                            </ul>
+                        <li>Klasa VIII</li>
+                            <ul class="dropsubmenu">
+                                <li><a href="podstawowa/viii/biologia.html">Biologia</a></li>
+                                <li><a href="podstawowa/viii/chemia.html">Chemia</a></li>
+                                <li><a href="podstawowa/viii/edb.html">Edukacja dla bezpieczeństwa</a></li>
+                                <li><a href="podstawowa/viii/fizyka.html">Fizyka</a></li>
+                                <li><a href="podstawowa/viii/geografia.html">Geografia</a></li>
+                                <li><a href="podstawowa/viii/historia.html">Historia</a></li>
+                                <li><a href="podstawowa/viii/angielski.html">Język angielski</a></li>
+                                <li><a href="podstawowa/viii/niemiecki.html">Język niemiecki</a></li>
+                                <li><a href="podstawowa/viii/polski.html">Język polski</a></li>
+                                <li><a href="podstawowa/viii/informatyka.html">Informatyka</a></li>
+                                <li><a href="podstawowa/viii/matematyka.html">Matematyka</a></li>
+                                <li><a href="podstawowa/viii/wos.html">Wiedza o społeczeństwie</a></li>
+                            </ul>
+                <li class="dropsubmenu">Gimnazjum</li>
+                <li class="dropsubmenu">Szkoła średnia</li>
+                </ul>
+            </ul>
         </header>
 
         <section>
