--- a/pbs/index.html
+++ b/pbs/index.html
@@ -18,9 +18,9 @@
                     <li>
                         <a href="index.html" class="active">Strona główna</a>
                     </li>
-                    <li class="dropsubmenu">Szkoła podstawowa</li>
+                    <li class="dropsubmenu"><a href="#">Szkoła podstawowa</a></li>
                         <ul class="dropmenu">
-                            <li>Klasa I</li>
+                            <li><a href="#">Klasa I</a></li>
                                 <ul class="dropsubmenu">
                                     <li><a href="podstawowa/i/matematyka.html">Matematyka</a></li>
                                     <li><a href="podstawowa/i/angielski.html">Język angielski</a></li>
