wigilia czas odpoczynku

--- a/pbs/index.html
+++ b/pbs/index.html
@@ -4,18 +4,19 @@
         <title>sprawdzianik.pl - Sprawdż się!</title>
         <meta name="description" content="Znajdziesz tutaj materiały, które przydadzą się Tobie w szkole.">
         <meta name="author" content="Szymon Mączyński">
+        <meta name="keywords" content="klasówka, praca klasowa, test, sprawdzian">
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="icon" type="image/png" href="img/icon.png">
         <link href="https://fonts.googleapis.com/css?family=Oxygen|Source+Sans+Pro:400,400i,700&amp;subset=latin-ext" rel="stylesheet">
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="img/logo.png"></a>
+            <a href="http://sprawdzianik.pl"><img src="img/logo.png"></a>
         </header>
         <nav>
             <!-- Zaktualizować linki do stron -->
            <ol>
-                <li class="active"><a href="index.html">Strona główna</a></li>
+                <li class="active"><a href="/">Strona główna</a></li>
                 <li><a href="#">Szkoła podstawowa</a>
                     <ul>
                         <li><a href="#">Klasa I</a>
@@ -33,14 +34,14 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa III</a>
-                            <ul>
+                            <ul class="up1">
                                 <li><a href="#">Matematyka</a></li>
                                 <li><a href="#">Język angielski</a></li>
                                 <li><a href="#">Język polski</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Klasa IV</a>
-                            <ul>
+                            <ul class="up2">
                                 <li><a href="podstawowa/iv/historia.html">Historia</a></li>
                                 <li><a href="podstawowa/iv/angielski.html">Język angielski</a></li>
                                 <li><a href="podstawowa/iv/polski.html">Język polski</a></li>
@@ -51,7 +52,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa V</a>
-                            <ul>
+                            <ul class="up5">
                                 <li><a href="podstawowa/v/biologia.html">Biologia</a></li>
                                 <li><a href="podstawowa/v/geografia.html">Geografia</a></li>
                                 <li><a href="podstawowa/v/historia.html">Historia</a></li>
@@ -63,7 +64,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa VI</a>
-                            <ul>
+                            <ul class="up3">
                                 <li><a href="podstawowa/vi/biologia.html">Biologia</a></li>
                                 <li><a href="podstawowa/vi/geografia.html">Geografia</a></li>
                                 <li><a href="podstawowa/vi/historia.html">Historia</a></li>
@@ -75,7 +76,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa VII</a>
-                            <ul>
+                            <ul class="up6">
                                 <li><a href="podstawowa/vii/biologia.html">Biologia</a></li>
                                 <li><a href="podstawowa/vii/chemia.html">Chemia</a></li>
                                 <li><a href="podstawowa/vii/fizyka.html">Fizyka</a></li>
@@ -89,7 +90,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa VIII</a>
-                            <ul>
+                            <ul class="up4">
                                 <li><a href="podstawowa/viii/biologia.html">Biologia</a></li>
                                 <li><a href="podstawowa/viii/chemia.html">Chemia</a></li>
                                 <li class="edb"><a href="podstawowa/viii/edb.html">Edukacja dla bezpieczeństwa</a></li>
@@ -124,7 +125,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa III</a>
-                            <ul>
+                            <ul class="up1">
                                 <li><a href="gimnazjum/iii/biologia.html">Biologia</a></li>
                                 <li><a href="gimnazjum/iii/chemia.html">Chemia</a></li>
                                 <li class="edb"><a href="gimnazjum/iii/edb.html">Edukacja dla bezpieczeństwa</a></li>
@@ -148,7 +149,7 @@
                         <li><a href="#">Klasa IV</a></li>
                     </ul>
                 </li>
-                <li><a href="autor.html">Od autora</a></li>
+                <li><a href="od-autora">Od autora</a></li>
            </ol>
         </nav>
         <section>
