--- a/pbs/menu.html
+++ b/pbs/menu.html
@@ -158,23 +158,26 @@
                 Wybierz książke:
             </div>
 
-            <div class="książka">
+            <a href="#"><div class="ksiazka">
+                <img src="menuimg/puls-zycia2.jpg">
+                <div class="podpis">
+                     Puls Życia 2 ~ Nowa Era
+                </div>
+            </div></a>
+
+            <div class="ksiazka">
                 ss
             </div>
 
-            <div class="książka">
+            <div class="ksiazka">
                 ss
             </div>
 
-            <div class="książka">
+            <div class="ksiazka">
                 ss
             </div>
 
-            <div class="książka">
-                ss
-            </div>
-
-            <div class="książka">
+            <div class="ksiazka">
                 ss
             </div>
             <div style="clear=float"> </div>
