--- a/pbs/od-autora/index.html
+++ b/pbs/od-autora/index.html
@@ -15,7 +15,7 @@
         <nav>
             <!-- Zaktualizować linki do stron -->
            <ol>
-                <li><a href="../">Strona główna</a></li>
+                <li class="active"><a href="/">Strona główna</a></li>
                 <li><a href="#">Szkoła podstawowa</a>
                     <ul>
                         <li><a href="#">Klasa I</a>
@@ -33,14 +33,14 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa III</a>
-                            <ul>
+                            <ul class="up1">
                                 <li><a href="#">Matematyka</a></li>
                                 <li><a href="#">Język angielski</a></li>
                                 <li><a href="#">Język polski</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Klasa IV</a>
-                            <ul>
+                            <ul class="up2">
                                 <li><a href="podstawowa/iv/historia.html">Historia</a></li>
                                 <li><a href="podstawowa/iv/angielski.html">Język angielski</a></li>
                                 <li><a href="podstawowa/iv/polski.html">Język polski</a></li>
@@ -51,7 +51,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa V</a>
-                            <ul>
+                            <ul class="up5">
                                 <li><a href="podstawowa/v/biologia.html">Biologia</a></li>
                                 <li><a href="podstawowa/v/geografia.html">Geografia</a></li>
                                 <li><a href="podstawowa/v/historia.html">Historia</a></li>
@@ -63,7 +63,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa VI</a>
-                            <ul>
+                            <ul class="up3">
                                 <li><a href="podstawowa/vi/biologia.html">Biologia</a></li>
                                 <li><a href="podstawowa/vi/geografia.html">Geografia</a></li>
                                 <li><a href="podstawowa/vi/historia.html">Historia</a></li>
@@ -75,7 +75,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa VII</a>
-                            <ul>
+                            <ul class="up6">
                                 <li><a href="podstawowa/vii/biologia.html">Biologia</a></li>
                                 <li><a href="podstawowa/vii/chemia.html">Chemia</a></li>
                                 <li><a href="podstawowa/vii/fizyka.html">Fizyka</a></li>
@@ -89,7 +89,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa VIII</a>
-                            <ul>
+                            <ul class="up4">
                                 <li><a href="podstawowa/viii/biologia.html">Biologia</a></li>
                                 <li><a href="podstawowa/viii/chemia.html">Chemia</a></li>
                                 <li class="edb"><a href="podstawowa/viii/edb.html">Edukacja dla bezpieczeństwa</a></li>
@@ -124,7 +124,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Klasa III</a>
-                            <ul>
+                            <ul class="up1">
                                 <li><a href="gimnazjum/iii/biologia.html">Biologia</a></li>
                                 <li><a href="gimnazjum/iii/chemia.html">Chemia</a></li>
                                 <li class="edb"><a href="gimnazjum/iii/edb.html">Edukacja dla bezpieczeństwa</a></li>
@@ -148,7 +148,7 @@
                         <li><a href="#">Klasa IV</a></li>
                     </ul>
                 </li>
-                <li class="active"><a href="od-autora">Od autora</a></li>
+                <li><a href="od-autora">Od autora</a></li>
            </ol>
         </nav>
         <section>
