--- a/pbs/menu.html
+++ b/pbs/menu.html
@@ -4,7 +4,7 @@
         <title>sprawdzianik.pl - Sprawdż się!</title>
         <meta name="description" content="Znajdziesz tutaj materiały, które przydadzą się Tobie w szkole.">
         <meta name="author" content="Szymon Mączyński">
-        <link rel="stylesheet" href="styles.css" type="text/css">
+        <link rel="stylesheet" href="styles/style.css" type="text/css">
         <link rel="icon" type="image/png" href="img/icon.png">
         <link href="https://fonts.googleapis.com/css?family=Oxygen|Source+Sans+Pro:400,400i,700&amp;subset=latin-ext" rel="stylesheet">
     </head>
@@ -180,7 +180,7 @@
             <div class="ksiazka">
                 ss
             </div>
-            <div style="clear=float"> </div>
+            <div style="clear:both"></div>
             </div>
 
         <footer>
