--- a/pbs/index.html
+++ b/pbs/index.html
@@ -107,9 +107,9 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="/gimnazjum">Gimnazjum</a>
+                <li><a href="gimnazjum">Gimnazjum</a>
                     <ul>
-                        <li><a href="/gimnazjum/ii/">Klasa II</a>
+                        <li><a href="gimnazjum/ii">Klasa II</a>
                             <ul>
                                 <li><a href="gimnazjum/ii/biologia">Biologia</a></li>
                                 <li><a href="gimnazjum/ii/chemia">Chemia</a></li>
@@ -124,7 +124,7 @@
                                 <li><a href="gimnazjum/ii/wos">Wiedza o społeczeństwie</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Klasa III</a>
+                        <li><a href="gimnazjum/iii">Klasa III</a>
                             <ul class="up1">
                                 <li><a href="gimnazjum/iii/biologia">Biologia</a></li>
                                 <li><a href="gimnazjum/iii/chemia">Chemia</a></li>
@@ -141,12 +141,25 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="#">Szkoła średnia</a>
+                <li><a href="srednia">Szkoła średnia</a>
                     <ul>
-                        <li><a href="#">Klasa I</a></li>
-                        <li><a href="#">Klasa II</a></li>
-                        <li><a href="#">Klasa III</a></li>
-                        <li><a href="#">Klasa IV</a></li>
+                        <li><a href="srednia/i">Klasa I</a></li>
+                            <ul>
+                                <li><a href="srednia/i/biologia">Biologia</a></li>
+                                <li><a href="srednia/i/chemia">Chemia</a></li>
+                                <li class="edb"><a href="srednia/i/edb">Edukacja dla bezpieczeństwa</a></li>
+                                <li><a href="srednia/i/fizyka">Fizyka</a></li>
+                                <li><a href="srednia/i/geografia">Geografia</a></li>
+                                <li><a href="srednia/i/historia">Historia</a></li>
+                                <li><a href="srednia/i/angielski">Język angielski</a></li>
+                                <li><a href="srednia/i/niemiecki">Język niemiecki</a></li>
+                                <li><a href="srednia/i/polski">Język polski</a></li>
+                                <li><a href="srednia/i/matematyka">Matematyka</a></li>
+                                <li><a href="srednia/i/wos">Wiedza o społeczeństwie</a></li>
+                            </ul>
+                        <li><a href="srednia/ii">Klasa II</a></li>
+                        <li><a href="srednia/iii">Klasa III</a></li>
+                        <li><a href="srednia/iv">Klasa IV</a></li>
                     </ul>
                 </li>
                 <li><a href="od-autora">Od autora</a></li>
