Theme color for android

--- a/pbs/podstawowa/index.html
+++ b/pbs/podstawowa/index.html
@@ -21,7 +21,7 @@
             <li>
                 <a href="../">Strona główna</a>
             </li>
-            <li>
+            <li class="active">
                 <a href="../podstawowa">Szkoła podstawowa</a>
                 <ul>
                     <li>
@@ -361,25 +361,16 @@
                     </li>
                 </ul>
             </li>
-            <li class="active">
+            <li>
                 <a href="../od-autora">Od autora</a>
             </li>
         </ol>
     </nav>
     <section>
-            <h1>Od uczniów dla uczniów!</h1>
-
-        <p>Strona ma na celu dzielenie się materiałami związanymi ze sprawdzianami. Ma za zadanie pomóc uczniom w jeszcze lepszym
-            przygotowaniu do sprawdzianu, aby mogli oni zyskiwać co raz to lepsze wyniki w nauce. Materiały dytaktyczne mogą
-            się pokrywać z materiałami, które znajdziecie w szkole - w końcu podstawa programowa jest jedna. Rozdzielenie
-            na poszczególne podręczniki ma za zadanie pomóc w kategoryzowaniu działów, a co za tym idzie, materiałów przygotowawczych
-            do sprawdzianów.
-        </p>
-
-        <center>
-            <h2><p>Więc na co jeszcze czekasz?</p>
-            <p>Zapraszam do korzystania z zasobów tej strony!</p></h2>
-        </center>
+        <h1>Szkoła podstawowa</h1>
+        <p>jest to pierwszy etap edukacji w Polsce. W większości krajów jest on obowiązkowy. W podstawie programowej możemy przeczytać o nim tak:</p>
+        <blockquote><p>Kształcenie w szkole podstawowej stanowi fundament wykształcenia. Zadaniem szkoły jest łagodne wprowadzenie dziecka w świat wiedzy, przygotowanie do wykonywania obowiązków ucznia oraz wdrażanie do samorozwoju. Najważniejszym celem kształcenia w szkole podstawowej jest dbałość o integralny rozwój biologiczny, poznawczy, emocjonalny, społeczny i moralny ucznia. </p>
+        <br><div id=italic>Rozporządzenie Ministra Edukacji Narodowej z dnia 14 lutego 2017 r.</div></blockquote>
 
     </section>
 
