--- a/pbs/index.html
+++ b/pbs/index.html
@@ -5,16 +5,16 @@
         <meta name="description" content="Znajdziesz tutaj materiały, które przydadzą się Tobie w szkole.">
         <meta name="author" content="Szymon Mączyński">
         <meta name="keywords" content="klasówka, praca klasowa, test, sprawdzian">
+        <meta name="theme-color" content="#01579B">
         <link rel="stylesheet" href="styles/style.css" type="text/css">
         <link rel="icon" type="image/png" href="img/icon.png">
-        <link href="https://fonts.googleapis.com/css?family=Oxygen|Source+Sans+Pro:400,400i,700&amp;subset=latin-ext" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oxygen|Source+Sans+Pro:400,400i,600,700&amp;subset=latin-ext" rel="stylesheet">
     </head>
     <body>
         <header>
             <a href="http://sprawdzianik.pl"><img src="img/logo.png"></a>
         </header>
         <nav>
-            <!-- Zaktualizować linki do stron -->
            <ol>
                 <li class="active"><a href=".">Strona główna</a></li>
                 <li><a href="podstawowa">Szkoła podstawowa</a>
