--- a/pbs/podstawowa/index.html
+++ b/pbs/podstawowa/index.html
@@ -2,9 +2,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Od autora | sprawdzianik.pl - Sprawdż się!</title>
+    <title>Szkoła podstawowa | sprawdzianik.pl - Sprawdż się!</title>
     <meta name="description" content="Znajdziesz tutaj materiały, które przydadzą się Tobie w szkole.">
     <meta name="author" content="Szymon Mączyński">
+    <meta name="theme-color" content="#01579B">
     <link rel="stylesheet" href="../styles/style.css" type="text/css">
     <link rel="icon" type="image/png" href="../img/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Oxygen|Source+Sans+Pro:400,400i,600,700&amp;subset=latin-ext" rel="stylesheet">
@@ -368,10 +369,30 @@
     </nav>
     <section>
         <h1>Szkoła podstawowa</h1>
-        <p>jest to pierwszy etap edukacji w Polsce. W większości krajów jest on obowiązkowy. W podstawie programowej możemy przeczytać o nim tak:</p>
+        <p>Jest to pierwszy główny etap edukacji w Polsce. W większości krajów jest on obowiązkowy. W podstawie programowej możemy przeczytać o nim tak:</p>
         <blockquote><p>Kształcenie w szkole podstawowej stanowi fundament wykształcenia. Zadaniem szkoły jest łagodne wprowadzenie dziecka w świat wiedzy, przygotowanie do wykonywania obowiązków ucznia oraz wdrażanie do samorozwoju. Najważniejszym celem kształcenia w szkole podstawowej jest dbałość o integralny rozwój biologiczny, poznawczy, emocjonalny, społeczny i moralny ucznia. </p>
-        <br><div id=italic>Rozporządzenie Ministra Edukacji Narodowej z dnia 14 lutego 2017 r.</div></blockquote>
-
+        <br><div id=italic>Rozporządzenie Ministra Edukacji Narodowej z dnia 14 lutego 2017 r., strona 11.</div></blockquote>
+        <br><h2>I etap edukacyjny</h2>
+        <p>Trwa on trzy lata. Składa się głównie z edukacji wczesnoszkolnej. Poniżej możesz skorzystać z odnośników do trzech klas, których on dotyczy.</p>
+        <center><ul class="lista">
+            <li><a href="i">Klasa I</a></li>
+            <li><a href="ii">Klasa II</a></li>
+            <li><a href="iii">Klasa III</a></li>
+        </ul></center>
+        <blockquote><p>Celem edukacji wczesnoszkolnej jest wspieranie całościowego rozwoju dziecka. Proces wychowania i kształcenia prowadzony w klasach I–III szkoły podstawowej umożliwia dziecku odkrywanie własnych możliwości, sensu działania oraz gromadzenie doświadczeń nadrodze prowadzącej do prawdy, dobra i piękna. Edukacja na tym etapie jest ukierunkowana na zaspokojenie naturalnych potrzeb rozwojowych ucznia. Szkoła respektuje podmiotowość ucznia w procesie budowania indywidualnej wiedzy oraz przechodzenia z wieku dziecięcego do okresu dorastania. W efekcie takiego wsparcia dziecko osiąga dojrzałość do podjęcia naukina II etapie edukacyjnym.</p>
+        <br><div id=italic>Rozporządzenie Ministra Edukacji Narodowej z dnia 14 lutego 2017 r., strona 16.</div></blockquote>
+        <br><h2>II etap edukacyjny</h2>
+        <p>Trwa on pięć lat. Pojawia się tutaj podział na przedmioty. Poniżej możesz skorzystać z odnośników kierujących do poszczególnych klas.</p>
+        <center><ul class="lista">
+            <li><a href="iv">Klasa IV</a></li>
+            <li><a href="v">Klasa V</a></li>
+            <li><a href="vi">Klasa VI</a></li>
+        </ul></center>
+        <p>Od 2017 roku zaczęto wprowadzać reformę szkolnictwa powodującą wygaszanie gimnazjów i zastąpienie ich ośmioletnią szkołą podstawową i czteroletnim liceum, bądź pięcioletnim technikum, lub szkołą branżową. W wyniku czego w szkole podstawowej pojawiły się dwie nowe klasy - siódma i ósma. Odnośniki do nich poniżej:</p>
+        <center><ul class="lista">
+            <li><a href="vii">Klasa VII</a></li>
+            <li><a href="viii">Klasa VIII</a></li>
+        </ul></center>
     </section>
 
     <footer>
