chyba koniec prac nad stroną główną
zostały podstrony

--- a/pbs/index.html
+++ b/pbs/index.html
@@ -171,36 +171,38 @@
         </section>
             <img class="imgmain" src="img/pencils.jpg">
         <section>
-            
-        </section>
-        <section>
-
-            <h2>Jako uczeń:</h2>
+            <center><h2>Czego możesz oczekiwać?</h2></center>
             <ul class="mainpage">
                 <li>Znajdziesz tutaj materiały, które masz w szkole.</li>
                 <li>Możesz przygotować się do testów podsumowujących działy.</li>
                 <li>Uzyskasz dostęp do materiałów wcześniej niż w szkole.</li>
-                <li>Gwarantowane lepsze oceny po wykonaniu sprawdzianów ☺</li>
+                <li>Dzięki tej stronie żaden test, kartkówka, sprawdzian, praca klasowa nie jest straszna!</li>
+                <li>Gwarancja lepszych ocen po skorzystaniu ze strony <a href=".">sprawdzianik.pl</a> ☺</li>
             </ul>
-            <p />
-            <h2>Jako nauczyciel:</h2>
-            <ul class="mainpage">
-                <li>Znajdziesz oryginalne materiały, które możesz wykorzystać na zajęciach.</li>
-                <li>Pomożesz uczniom w zdobywaniu lepszych ocen, korzystając z przyjaźniejszych arkuszy.</li>
-            </ul>
-            <br />
         </section>
+            <img class="imgmain" src="img/blackboard.jpg">
+        <section>
+            <center><h2>Koniec z bezcelowym zakuwaniem książek!</h2></center>
+            <p class="weight400">Po co uczyć się na sprawdziany z przedmiotów, które wiesz, że i tak się nie przydadzą Tobie w życiu? Korzystając z materiałów na tej stronie możesz przygotować się bezpośrednio na sprawdziany, wiedząc czego możesz się spodziewać. Koniec z nauką niepotrzebnych informacji. Koniec z niepotrzebnie poświęconymi godzinami nad książkami. Dzięki tej stronie to możliwe!</p>
+        </section>
+            <img class="imgmain" src="img/learn2.jpg">
+        <section>
+            <center><h2>Bez wysiłków nie ma efektów!</h2></center>
+            <p class="weight400">Niestety, bez przygotowania, dobrych ocen nie zdobędziesz. Wykonując testy znajdujące się na tej stronie, niezależnie od poziomu nauczania, masz okazje przygotować się do podobnych w szkole. To od Ciebie zależy ile poświęcisz czasu na naukę. Dzięki tej stronie na pewno zaoszczędzisz czas, który będziesz mógł uczniu poświęcić na inne czynności, np. wyjście ze znajomymi do kina, spędzić czas z rodziną i najbliższymi, lub po prostu pograć. Ważne, aby mimo niepowodzeń, masz się nie poddawać, przecież nie od razu Rzym zbudowano.</p>
+        </section>
+            <img class="imgmain" src="img/blackboard2.jpg">
         <section>
             <center>
                 <h2>Czemu jeszcze jesteś na tej stronie?</h2>
-                <h2><span class="blue1">Użyj menu u góry strony</span> i korzystaj z materiałów udostępnionych 
-                <br><span class="blue2">dla Ciebie!</span></h2>
+                <h2><span class="bluespanmainsection1">Użyj menu u góry strony</span> i korzystaj z materiałów udostępnionych 
+                <br><span class="bluespanmainsection2">dla Ciebie!</span></h2>
             </center>
         </section>
 
         <footer>
             <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> &copy; 2018
             <br>Korzystanie ze strony <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> jest dobrowolne. Serwis nie hostuje plików.
+            <br>Jeżeli masz jakieś uwagi, sugestie - <a id="mail" href="mailto:uwagi@sprawdzianik.pl">skontaktuj się z nami</a>. Dzięki za wkład w tworzeniu strony! ☺
         </footer>
     </body>
 
