--- a/pbs/index.html
+++ b/pbs/index.html
@@ -167,7 +167,7 @@
         <section>
             <center><h1>Witaj na stronie <a href=".">sprawdzianik.pl</a>!</h1></center>
             <center><i><h2>Od uczniów dla uczniów!</h2></i></center>
-            <p class="weight400">Strona ma na celu dzielenie się materiałami związanymi ze wszelkiego rodzaju sprawdzianami, kartkówkami, testami, itp. Ma za zadanie pomóc uczniom w jeszcze lepszym przygotowaniu do testu, aby mogli oni zyskiwać co raz to lepsze wyniki w nauce. Materiały dytaktyczne mogą się pokrywać z materiałami, które znajdziecie w szkole - w końcu podstawa programowa jest jedna. Rozdzielenie na poszczególne podręczniki ma za zadanie pomóc w kategoryzowaniu materiałów.</p>
+            <p class="weight400">Strona ma na celu dzielenie się materiałami związanymi ze wszelkiego rodzaju sprawdzianami, kartkówkami, testami, itp. Ma za zadanie pomóc uczniom w jeszcze lepszym przygotowaniu do testu, aby mogli oni zyskiwać co raz to lepsze wyniki w nauce. Materiały dytaktyczne mogą się pokrywać z materiałami, które znajdziecie w szkole − w końcu podstawa programowa jest jedna. Rozdzielenie na poszczególne podręczniki ma za zadanie pomóc w kategoryzowaniu materiałów.</p>
         </section>
             <img class="imgmain" src="img/pencils.jpg">
         <section>
@@ -184,6 +184,11 @@
         <section>
             <center><h2>Koniec z bezcelowym zakuwaniem książek!</h2></center>
             <p class="weight400">Po co uczyć się na sprawdziany z przedmiotów, które wiesz, że i tak się nie przydadzą Tobie w życiu? Korzystając z materiałów na tej stronie możesz przygotować się bezpośrednio na sprawdziany, wiedząc czego możesz się spodziewać. Koniec z nauką niepotrzebnych informacji. Koniec z niepotrzebnie poświęconymi godzinami nad książkami. Dzięki tej stronie to możliwe!</p>
+        </section>
+            <img class="imgmain" src="img/quality.jpg">
+        <section>
+            <center><h2>Dlaczego akurat Masz skorzystać z tej strony?</h2></center>
+            <p class="weight400">Znajdziesz tutaj materiały wysokiej jakości, tworzone na podstawie istniejącej podstawy programowej i aktualnymi wymaganiami stawianymi przed uczniami. Treści aktualizowane są na bieżąco. Z czasem pojawiać się będzie więcej kartkówek, sprawdzianów, prac klasowych. Możesz pomóc w tworzeniu tej strony korzystając z maila znajdującego się na końcu każdej strony. Na pewno dzięki Twojej pomocy strona będzie szybciej wypełniona wysokiej jakości zawartością, przez co strona będzie bardziej pomocna uczniom.</p>
         </section>
             <img class="imgmain" src="img/learn2.jpg">
         <section>
@@ -202,7 +207,7 @@
         <footer>
             <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> &copy; 2018
             <br>Korzystanie ze strony <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> jest dobrowolne. Serwis nie hostuje plików.
-            <br>Jeżeli masz jakieś uwagi, sugestie - <a id="mail" href="mailto:uwagi@sprawdzianik.pl">skontaktuj się z nami</a>. Dzięki za wkład w tworzeniu strony! ☺
+            <br>Jeżeli masz jakieś uwagi, sugestie − <a id="mail" href="mailto:uwagi@sprawdzianik.pl">skontaktuj się z nami</a>. Dzięki za Twój wkład w tworzeniu strony! ☺
         </footer>
     </body>
 
